[gd_scene load_steps=11 format=3 uid="uid://dhgcf5nbtrfdn"]

[ext_resource type="Script" path="res://entities/projectiles/laser.gd" id="1_qc3b8"]

[sub_resource type="Animation" id="Animation_wlf8b"]
resource_name = "laser_firing"
length = 3.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.584875, 0.60683, 1.10683, 1.15, 3.60668, 3.8005),
"transitions": PackedFloat32Array(1, 0, 1, 0, 1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 4.0, 4.0, 7.0, 7.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Line2D:default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35, 0.60683, 0.80683, 0.90683, 1.10683, 1.15, 3.60668, 3.7965),
"transitions": PackedFloat32Array(1, 1, 2, 0, 2, 0, 1, 1, 1),
"update": 0,
"values": [Color(0.717647, 0.729412, 0.760784, 1), Color(0.717647, 0.729412, 0.760784, 1), Color(0.552941, 0.0352941, 0.207843, 1), Color(0.552941, 0.0352941, 0.207843, 0.0784314), Color(0.552941, 0.0352941, 0.207843, 1), Color(0.552941, 0.0352941, 0.207843, 0.0784314), Color(0.756863, 0.0745098, 0.298039, 1), Color(0.756863, 0.0745098, 0.298039, 1), Color(0.0980392, 0, 0.0156863, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.14282, 3.60264),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CastingParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.15, 3.61072),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.15, 3.60664),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v7w68"]
_data = {
"laser_firing": SubResource("Animation_wlf8b")
}

[sub_resource type="SegmentShape2D" id="SegmentShape2D_f8ker"]
b = Vector2(0, 2.222)

[sub_resource type="Gradient" id="Gradient_2pm6j"]
offsets = PackedFloat32Array(0, 0.989189)
colors = PackedColorArray(0.513726, 0, 0, 1, 0.468356, 0, 0, 0.105882)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_shdcg"]
gradient = SubResource("Gradient_2pm6j")

[sub_resource type="Curve" id="Curve_4en82"]
_data = [Vector2(0.731481, 1), 0.0, 0.0, 0, 0, Vector2(0.99537, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_e8hsa"]
curve = SubResource("Curve_4en82")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2uhf0"]
particle_flag_disable_z = true
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 60.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 5.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_e8hsa")
color_ramp = SubResource("GradientTexture1D_shdcg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_el2xi"]
particle_flag_disable_z = true
spread = 90.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 50.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 5.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_e8hsa")
color_ramp = SubResource("GradientTexture1D_shdcg")

[node name="laser" type="RayCast2D"]
target_position = Vector2(0, 2000)
script = ExtResource("1_qc3b8")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 1000)
width = 1.0
default_color = Color(0.717647, 0.729412, 0.760784, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v7w68")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.45, 0.45)
shape = SubResource("SegmentShape2D_f8ker")
disabled = true

[node name="CastingParticles" type="GPUParticles2D" parent="."]
rotation = 1.5708
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_2uhf0")

[node name="CollisionParticles" type="GPUParticles2D" parent="."]
rotation = 1.5708
amount = 10
process_material = SubResource("ParticleProcessMaterial_el2xi")
lifetime = 0.8

[node name="Timer_DmgProc" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer_DmgProc" to="." method="_on_timer_dmg_proc_timeout"]
